# unicode-prettytable

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  table.rs  util.rs
unicode_prettytable/: Cargo.toml
unicode_prettytable/examples/: separate_header.rs  usage.rs
unicode_prettytable/src/: lib.rs  table.rs  traits.rs  util.rs
unicode_prettytable_cli/: Cargo.toml
unicode_prettytable_cli/src/: cli.rs  main.rs
