[package]
name = "unicode-prettytable"
version = "0.2.0"
authors = ["Sridaran Thoniyil <sri7thon@gmail.com>"]
edition = "2018"
description = "Table formatting library using Unicode Box-drawing characters"
repository = "https://github.com/srithon/unicode-prettytable"
license = "MIT OR Apache-2.0"
keywords = ["unicode", "format", "library"]
categories = ["value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
